# ScratchV

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ScratchV_Promo.pptx  ScratchV_宣讲PPT.pptx  ScratchV_宣讲PPT_Pro.pptx  ci_models.json  output.ll  pyproject.toml  setup.py
.claude/: settings.json
.github/workflows/: ci-benchmark.yml  ci.yml  pages.yml
benchmark_reports/: optimization_history.json  test_history.json
benchmarks/: bench_asm_beautifier.py  bench_asm_peephole.py  bench_const_merge.py  bench_inst_counter.py  bench_inst_scheduler.py  bench_inst_select_ext.py  bench_regalloc_linear.py  bench_runner.py  generate_models.py  run_benchmark.py  test_benchmark.py
benchmarks/cases/: 001_simple_add.desc  001_simple_add.dsl  001_simple_add.expected  (+53 more)
docs/: CODING_STANDARDS.md  ScratchV.html  ScratchV.md
examples/: cnn_model.dsl  end_to_end_pipeline.py  gen_conv_onnx.py  gen_ppt.py  llvm_optimization_pipeline.py  onnx_llvm_verification.py  onnx_to_dsl.py
scratchv/: __init__.py  compiler.py  main.py  pass_interface.py
scratchv_dag/: README.md  __init__.py  allocator.py  cache.py  sdnode.py  selection_dag.py
scripts/: gen_minimal_cnn.py  gen_ppt.py  gen_ppt_v2.py  lint_check.sh
tests/: test_asm_beautifier.py  test_asm_peephole.py  test_bench_runner.py  test_cfg_builder.py  test_const_merge.py  test_dsl_errors.py  test_dsl_extended.py  test_inst_counter.py  test_inst_scheduler.py  test_inst_select_ext.py  test_ir_verifier.py  test_llvm_codegen.py  test_logger.py  test_optimizer_advanced.py  test_regalloc_linear.py  test_verification.py
(+62 files in other folders)
